# bungee

./: .cursorrules  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bug.md  build.rs  ffiProgress.md  miss.md  new.md  progress.md  usage.md  version.cmake
.github/workflows/: push.yml  release.yml
bungee/: Bungee.h  CommandLine.h  Push.h  bungee_c.c  bungee_c.cpp  bungee_c.h  version.h
bungee-ffi/: Cargo.toml  build.rs  wrapper.cpp
bungee-ffi/examples/: audio_test.rs  basic.rs  basic_test.rs  wav_test.rs
bungee-ffi/include/: bungee_ffi.h
bungee-ffi/src/: error.rs  ffi.rs  lib.rs
bungee-rs/: Cargo.toml  bug.md  build.rs  progress.md  todo.md  trybug.md  whybug.md  wrapper.cpp  wrapper.h
bungee-rs/src/: bungee.rs  lib.rs  main.rs
cmd/: main.cpp  wav_test.cpp
old/: bug.md  ffiProgress.md  ipc.md  prompt.txt
old/bungee-ffi/: Cargo.toml  build.rs  bungee_ffi.c  bungee_ffi.h  debug_log.h  wrapper.cpp
old/bungee-ffi/examples/: wav_test.rs
old/bungee-ffi/src/: error.rs  ffi.rs  lib.rs  monitoring.rs  recursion.rs
old/bungee-rs/: wrapper.cpp
old/bungee-rs/src/: bungee.rs
src/: Assert.cpp  Basic.cpp  Basic.h  Fourier.cpp  Fourier.h  Grain.cpp  Input.cpp  Input.h  Modes.h  Output.cpp  Output.h  Phase.h  Resample.h  Stretcher.cpp  Timing.cpp  Timing.h  Window.cpp  Window.h
