[package]
name = "bungee-ffi"
version = "0.1.0"
edition = "2021"
description = "Safe Rust bindings for the Bungee audio time stretching library"
license = "MPL-2.0"

[dependencies]
log = "0.4"  # Logging facade
env_logger = "0.10"  # Simple logger implementation

[build-dependencies]
cc = "1.0"  # For compiling C/C++ code

[dev-dependencies]
# Test dependencies will be added later
env_logger = "0.10"
