[package]
name = "bungee-ffi"
version = "0.1.0"
edition = "2021"
description = "Rust FFI bindings for Bungee audio time-stretching library"
license = "MIT"

[dependencies]
thiserror = "1.0"

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[dev-dependencies]
hound = "3.5"  # For WAV file handling in examples

[[example]]
name = "basic_test"
path = "examples/basic_test.rs"

[[example]]
name = "wav_test"
path = "examples/wav_test.rs"

[lib]
name = "bungee_ffi"
crate-type = ["cdylib", "rlib"] 